--- a/US_NOAA_Storm_Analysis.html
+++ b/US_NOAA_Storm_Analysis.html
@@ -381,6 +381,7 @@ $(document).ready(function () {
 <h1>US NOAA Storm Database Analysis on the Cost and Magnitude of Recent Storms</h1>
 <div id="reporducible-research-peer-assessment-2" class="section level3">
 <h3>Reporducible Research: Peer Assessment #2</h3>
+<p>Author: Jordan Woloschuk</p>
 </div>
 <div id="assignment-overview" class="section level2">
 <h2>Assignment Overview</h2>
